# cpp_logger

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  README_EN.md
.github/workflows/: ci.yml
benchmark/: benchmark.cpp  comparison_benchmark.cpp
cmake/: cpp_loggerConfig.cmake.in
examples/: example.cpp
include/: BlockingQueue.h  Logger.h
src/: Logger.cpp  main.cpp  test_blocking_queue.cpp
test/: test.cpp
tests/: logger_tests.cpp
